--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,30 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Vanilla App Template</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
+
   <body>
-    <load ="partials/header.html" />
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+    <form class="form">
+      <input 
+      type="text" 
+      class="input" 
+      name="search" 
+      placeholder="Search images..." 
+      required
+      >
+      <button type="submit" class="button" data-start>Search</button>
+    </form>
+  
+    <span class="loader visible"></span>
+    <ul class="gallery"></ul>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
+    <load ="partials/header.html"/>
     <script type="module" src="./main.js"></script>
+    
   </body>
+
 </html>
